# pca

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
test/: gen.R
