[package]
name = "pca"
version = "0.1.3"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
edition = "2021"
description = "principal component computation using SVD"
license = "MIT"
repository = "https://github.com/ekg/pca"
readme = "README.md"
keywords = ["statistics", "PCA"]
categories = ["science"]
documentation = "https://docs.rs/pca"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
ndarray-rand = "0.14.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsvd = "0.1.2"

[lib]
name = "pca"
path = "src/lib.rs"
